fix: command menu on mobile

--- a/raven-app/src/components/feature/CommandMenu/commandMenu.styles.css
+++ b/raven-app/src/components/feature/CommandMenu/commandMenu.styles.css
@@ -114,6 +114,10 @@
         max-height: 80vh;
     }
 
+    .command-menu [cmdk-item]:hover {
+        background: transparent;
+    }
+
 }
 
 .command-menu [cmdk-list]::-webkit-scrollbar {
